--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
-    "@testing-library/user-event": "^13.5.0",
     "antd": "^5.24.6",
     "axios": "^1.8.4",
     "bootstrap": "^5.2.3",
     "date-fns": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.4.1",
+    "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -42,6 +41,10 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "jest": "^27.5.1"
+    "@testing-library/user-event": "^14.6.1",
+    "axios-mock-adapter": "^2.1.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.5.1",
+    "jest-environment-jsdom": "^29.7.0"
   }
 }
